// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders-correctly 1`] = `
<BannerAd
  requestOptions={
    Object {
      "requestNonPersonalizedAdsOnly": false,
    }
  }
  size="SMART_BANNER"
  unitId="bannerTestId"
/>
`;

exports[`renders-correctly-production 1`] = `
<BannerAd
  onAdFailedToLoad={[Function]}
  requestOptions={
    Object {
      "requestNonPersonalizedAdsOnly": false,
    }
  }
  size="SMART_BANNER"
  unitId="testUnitId"
/>
`;
